--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Mobile developer works in: Flutter, Xcode and Android Studio</div>
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="list-LANGUAGES" role="tabpanel" aria-labelledby="list-LANGUAGES-list">Arabic • English</div>
-                    <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">Java, Swift, Kotlin, Dart, Flutter, Python, Assembly, HTML and CSS, JavaScript,
+                    <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">Java, Swift, Kotlin, Dart, Flutter, Python, Django, Assembly, HTML and CSS, JavaScript,
         php, jQuery, XML, SQL, JSON, C, work with APIs</div>
                     <div class="tab-pane fade" id="list-COMPUTER-SKILLS" role="tabpanel" aria-labelledby="list-COMPUTER-SKILLS-list">Microsoft Office, Microsoft Enterprise Architect, AutoCAD, Adobe Photoshop,
         Adobe Premiere, Adobe After Effect, XCode, Android Studio, Arduino, Visual Basic,
