--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Mobile developer works in: Flutter, Xcode and Android Studio</div>
                             <li class="list-group-item">Season job with Zain for one month.</li>
 
                             <li class="list-group-item">Made some mobile app project for some costumer like an application for a specific book.</li>
-                            <li class="list-group-item">Work on UML diagram with my team for a software course.</li>
+                            <li class="list-group-item">Work on UML diagram with my team for a software course. <a href='https://drive.google.com/file/d/1CPoff61PFgws8X5oUv39drMSfjD_qUrg/view?usp=sharing'>SRS</a> <a href='https://drive.google.com/file/d/1u-ZOdDMSD2THR7OSo_7_rxUEflA9qixe/view?usp=sharing'>SDD</a></li>
                             <li class="list-group-item">Work on IOS app for KFUPM deanship of student affair.</li>
                             <li class="list-group-item">Work on market website for web development course.</li>
 
