--- a/index.html
+++ b/index.html
@@ -83,14 +83,11 @@ Mobile developer works in: Flutter, Xcode and Android Studio</div>
                             <li class="list-group-item">Software Engineering Trainee at NyarTech Company.</li>
                             <li class="list-group-item">Season job with Zain for one month.</li>
 
-                            <li class="list-group-item">Made some mobile app project for some costumer like an application for a specific book.</li>
                             <li class="list-group-item">Work on UML diagram with my team for a software course. <a href='https://drive.google.com/file/d/1pW6sNWvzdwA_AjR5pUQE49X1-dkg-Wvt/view?usp=sharing'>SRS</a> <a href='https://drive.google.com/file/d/1BOXBQBTXeeQjgF-gsiZ5q6sZ7eykU62R/view?usp=sharing'>SDD</a></li>
                             <li class="list-group-item">Work on IOS app for KFUPM deanship of student affair. <a href='https://apps.apple.com/sa/app/ikfupm/id1473702047'>IOS</a></li>
                             <li class="list-group-item">Work on market website for web development course. <a href='http://testharaj.herokuapp.com/'>Beta Website</a></li>
-                            <li class="list-group-item">Work in privacy project to edit text privately and securely. <a href='https://github.com/amd840/COE426'>GitHub</a></li>
-                            
-                            
-                            <li class="list-group-item">Work on a prototype of KFUPM registration system with my team for software course.</li>
+                            <li class="list-group-item">Work in privacy project to edit text privately and securely. <a href='https://github.com/amd840/COE426'>GitHub</a></li>                       
+                            <li class="list-group-item">Work on a prototype of KFUPM registration system with my team for software course.<a href='https://github.com/mojtaba-alamer/Registration_System'>GitHub</a></li>
 
 
                         </ul>
