--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a class="list-group-item list-group-item-action" id="list-LANGUAGES-list" data-bs-toggle="list" href="#list-LANGUAGES" role="tab" aria-controls="LANGUAGES">LANGUAGES</a>
                     <a class="list-group-item list-group-item-action" id="list-PROGRAMMING-LANGUAGES-list" data-bs-toggle="list" href="#list-PROGRAMMING-LANGUAGES" role="tab" aria-controls="PROGRAMMING LANGUAGES">PROGRAMMING LANGUAGES</a>
                     <a class="list-group-item list-group-item-action" id="list-COMPUTER-SKILLS-list" data-bs-toggle="list" href="#list-COMPUTER-SKILLS" role="tab" aria-controls="COMPUTER-SKILLS">COMPUTER SKILLS</a>
-                    <a class="list-group-item list-group-item-action"data-bs-toggle="list" href='./AhmedAlmoairfi.pdf'>Download the CV</a>
+                    <a class="list-group-item list-group-item-action" href='./AhmedAlmoairfi.pdf'>Download the CV</a>
           
       </div>
     </div>
