--- a/contactme.html
+++ b/contactme.html
@@ -30,7 +30,8 @@
         <h5 class="card-title">Ahmed Almoairfi</h5>
         <p class="card-text">Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals.
         <br>Expected Graduation at May 2021</p>
-        <p class="card-text">Mobile developer works in: Flutter, Xcode and Android Studio</p>
+        <p class="card-text">Mobile developer works on: Flutter, Xcode and Android Studio</p>
+        <p class="card-text">Backend developer works on: Python Django</p>
         <p class="card-text">  <small class="text-muted"><a href="tel:+966543096731"><i  class="fas fa-phone-alt text-primary"></i></a>+966 543096731</small></p>
         <p class="card-text"> <small class="text-muted"><a href="mailto:ahmedalmoairfi@gmail.com"> <i class="fas fa-envelope">  </i></a> ahmedalmoairfi@gmail.com</small></p>
         <p class="card-text"> <small class="text-muted"><a href=" https://www.linkedin.com/in/ahmed-almoairfi-009a57167/"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
