--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     <div class="tab-pane fade show active" id="list-OBJECTIVE" role="tabpanel" aria-labelledby="list-OBJECTIVE-list">Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. 
 Expected Graduation at May 2021
 
-Mobile developer works in: Flutter, Xcode and Android Studio</div>
+Mobile developer works on: Flutter, Xcode and Android Studio.
+Backend developer works on: Python Django.
+</div>
                     <div class="tab-pane fade" id="list-EDUCATIONS" role="tabpanel" aria-labelledby="list-EDUCATIONS-list">
                         <ul class="list-group list-group-flush" style="text-align:left;">
                             <li class="list-group-item">King Fahad University of Petroleum and Minerals, B.S., Software Engineering Expected May 2021.</li>
