--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="border" style="text-align:center;padding: 10px; margin :10px">
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="list-OBJECTIVE" role="tabpanel" aria-labelledby="list-OBJECTIVE-list">Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. 
-Expected Graduation at May 2021
+Expected Graduation at May 2021<br>
 
-Mobile developer works on: Flutter, Xcode and Android Studio.
+Mobile developer works on: Flutter, Xcode and Android Studio.<br>
 Backend developer works on: Python Django.
 </div>
                     <div class="tab-pane fade" id="list-EDUCATIONS" role="tabpanel" aria-labelledby="list-EDUCATIONS-list">
