--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Backend developer works on: Python Django.
                     <div class="tab-pane fade" id="list-LANGUAGES" role="tabpanel" aria-labelledby="list-LANGUAGES-list">Arabic • English</div>
                     <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">Java, Swift, Kotlin, Dart, Flutter, Python, Django, Assembly, HTML and CSS, JavaScript,
         php, jQuery, XML, SQL, JSON, C, work with APIs
-                    <table><tr><td>https://e7.pngegg.com/pngimages/499/698/png-clipart-swift-playgrounds-apple-computer-icons-computer-programming-apple-orange-logo.png</td</tr<table/>
+                    <table><tr><td><img class="lang" src="https://e7.pngegg.com/pngimages/499/698/png-clipart-swift-playgrounds-apple-computer-icons-computer-programming-apple-orange-logo.png"</td</tr<table/>
                     </div>
                     <div class="tab-pane fade" id="list-COMPUTER-SKILLS" role="tabpanel" aria-labelledby="list-COMPUTER-SKILLS-list">Microsoft Office, Microsoft Enterprise Architect, AutoCAD, Adobe Photoshop,
         Adobe Premiere, Adobe After Effect, XCode, Android Studio, Arduino, Visual Basic,
