--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         a:link {
             text-decoration: none;
         }
+        img.lang{
+            height:45px;
+            width:55px;
+        }
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -221,7 +225,7 @@ Backend developer works on: Python Django.
                     <div class="tab-pane fade" id="list-LANGUAGES" role="tabpanel" aria-labelledby="list-LANGUAGES-list">Arabic • English</div>
                     <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">Java, Swift, Kotlin, Dart, Flutter, Python, Django, Assembly, HTML and CSS, JavaScript,
         php, jQuery, XML, SQL, JSON, C, work with APIs
-                    <table><tr><td><img class="lang" src="https://e7.pngegg.com/pngimages/499/698/png-clipart-swift-playgrounds-apple-computer-icons-computer-programming-apple-orange-logo.png"</td</tr<table/>
+                    <table><tr><td><img class="lang" src="http://assets.stickpng.com/images/58482ce4cef1014c0b5e4a4c.png"</td</tr<table/>
                     </div>
                     <div class="tab-pane fade" id="list-COMPUTER-SKILLS" role="tabpanel" aria-labelledby="list-COMPUTER-SKILLS-list">Microsoft Office, Microsoft Enterprise Architect, AutoCAD, Adobe Photoshop,
         Adobe Premiere, Adobe After Effect, XCode, Android Studio, Arduino, Visual Basic,
