--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Backend developer works on: Python Django.
                             <td><img alt='html' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png"</td>
                             <td><img alt='css' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/CSS.3.svg/730px-CSS.3.png"</td>
                             <td><img alt='rest api' class="lang" src="https://miro.medium.com/max/2720/1*3R6tTamJyAn2mRBgzfFlfQ.png"</td>
-                            <td><img alt='ajax' class="./AJAX_logo_by_gengns.png"</td>
+                            <td><img alt='ajax' class="lang" src="./AJAX_logo_by_gengns.png"</td>
                             <td><img alt='c' class="lang" src="https://cdn.iconscout.com/icon/free/png-512/c-programming-569564.png"</td>
                         </tr>
                     </table>
