--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@ Backend developer works on: Python Django.
                     <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">
                   
                         <div class='row'>
-                            <div class='col'><img alt='swift' class="lang" src="http://assets.stickpng.com/images/58482ce4cef1014c0b5e4a4c.png"></div>
-                            <div class='col'><img alt='python' class="lang" src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png"></div>
-                           <div class='col'><img alt='kotlin' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin_Icon.png"></div>
-                           <div class='col'><img alt='java' class="lang" src="http://assets.stickpng.com/images/58480979cef1014c0b5e4901.png"></div>
-                            <div class='col'><img alt='dart' class="lang" src="https://dart.dev/assets/shared/dart-logo-for-shares.png?2"></div>
+                            <div class='col-md-4'><img alt='swift' class="lang" src="http://assets.stickpng.com/images/58482ce4cef1014c0b5e4a4c.png"></div>
+                            <div class='col-md-4'><img alt='python' class="lang" src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png"></div>
+                           <div class='col-md-4'><img alt='kotlin' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin_Icon.png"></div>
+                           <div class='col-md-4'><img alt='java' class="lang" src="http://assets.stickpng.com/images/58480979cef1014c0b5e4901.png"></div>
+                            <div class='col-md-4'><img alt='dart' class="lang" src="https://dart.dev/assets/shared/dart-logo-for-shares.png?2"></div>
                         </div>
                           <div class='row'>
                           <div class='col'><img alt='django' class="lang" src="https://cdn.freebiesupply.com/logos/thumbs/2x/django-community-logo.png"></div>
