--- a/index.html
+++ b/index.html
@@ -225,21 +225,21 @@ Backend developer works on: Python Django.
                     <div class="tab-pane fade" id="list-LANGUAGES" role="tabpanel" aria-labelledby="list-LANGUAGES-list">Arabic • English</div>
                     <div class="tab-pane fade" id="list-PROGRAMMING-LANGUAGES" role="tabpanel" aria-labelledby="list-PROGRAMMING-LANGUAGES-list">
                   
-                        <div class='row g-2'>
+                        <div class='row p-3'>
                             <div class='col'><img alt='swift' class="lang" src="http://assets.stickpng.com/images/58482ce4cef1014c0b5e4a4c.png"></div>
                             <div class='col'><img alt='python' class="lang" src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png"></div>
                            <div class='col'><img alt='kotlin' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin_Icon.png"></div>
                            <div class='col'><img alt='java' class="lang" src="http://assets.stickpng.com/images/58480979cef1014c0b5e4901.png"></div>
-                            <div class='co'><img alt='dart' class="lang" src="https://dart.dev/assets/shared/dart-logo-for-shares.png?2"></div>
+                            <div class='col'><img alt='dart' class="lang" src="https://dart.dev/assets/shared/dart-logo-for-shares.png?2"></div>
                         </div>
-                          <div class='row g-2'>
+                          <div class='row p-3'>
                           <div class='col'><img alt='django' class="lang" src="https://cdn.freebiesupply.com/logos/thumbs/2x/django-community-logo.png"></div>
                            <div class='col'><img alt='flutter' class="lang" src="https://i.pinimg.com/originals/c1/65/1f/c1651f598d212acdfe551f103548e495.png"></div>
                          <div class='col'><img alt='javascript' class="lang" src="https://e7.pngegg.com/pngimages/780/695/png-clipart-javascript-comment-html-logo-international-conference-on-missions-node-js-icon-angle-text.png"></div>
                             <div class='col'><img alt='php' class="lang" src="https://pngimg.com/uploads/php/php_PNG12.png"></div>
                             <div class='col'><img alt='sql' class="lang" src="https://img2.arabpng.com/20180526/oqt/kisspng-microsoft-sql-server-mysql-database-logo-5b098c6ebad6d7.7316225815273524307653.jpg"></div>
                         </div>
-                         <div class='row'>
+                         <div class='row p-2'>
                             <div class='col'><img alt='html' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png"></div>
                           <div class='col'><img alt='css' class="lang" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/CSS.3.svg/730px-CSS.3.png"></div>
                            <div class='col'><img alt='rest api' class="lang" src="https://miro.medium.com/max/2720/1*3R6tTamJyAn2mRBgzfFlfQ.png"></div>
