--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     
                     <a class="list-group-item list-group-item-action" id="list-EXPERIENCES-list" data-bs-toggle="list" href="#list-EXPERIENCES" role="tab" aria-controls="EXPERIENCES">EXPERIENCES</a>
-                    <a class="list-group-item list-group-item-action" id="list-PROJECTS-list" data-bs-toggle="list" href="#list-PROJECTS" role="tab" aria-controls="PROJECTS" hidden>PROJECTS</a>
+                <a class="list-group-item list-group-item-action" id="list-PROJECTS-list" data-bs-toggle="list" href="#list-PROJECT" role="tab" aria-controls="PROJECT">PROJECTS</a>
 
                     <a class="list-group-item list-group-item-action" id="list-ACTIVITIES-list" data-bs-toggle="list" href="#list-ACTIVITIES" role="tab" aria-controls="ACTIVITIES">ACTIVITIES</a>
                     <a class="list-group-item list-group-item-action" id="list-LANGUAGES-list" data-bs-toggle="list" href="#list-LANGUAGES" role="tab" aria-controls="LANGUAGES">LANGUAGES</a>
@@ -96,10 +96,17 @@ Backend developer works on: Python Django.
                             <li class="list-group-item">Software Engineering Trainee at NyarTech Company.</li>
                             <li class="list-group-item">Season job with Zain for one month.</li>
 
+
+
+                        </ul>
+                    </div>
+                       <div class="tab-pane fade " id="list-PROJECT" role="tabpanel" aria-labelledby="list-PROJECT-list">
+                        <ul class="list-group list-group-flush" style="text-align:left;">
+                            <li class="list-group-item">Work in privacy project to edit text privately and securely. <a href='https://github.com/amd840/COE426'>GitHub</a></li>                       
+
                             <li class="list-group-item">Work on UML diagram with my team for a software course. <a href='https://docs.google.com/document/d/15W9lirOTEpx-E43Cfuio-694b3tX6njonUKL1HDW03Y/edit?usp=sharing'>SRS</a> <a href='https://drive.google.com/file/d/1BOXBQBTXeeQjgF-gsiZ5q6sZ7eykU62R/view?usp=sharing'>SDD</a></li>
                             <li class="list-group-item">Work on IOS app for KFUPM deanship of student affair. <a href='https://apps.apple.com/sa/app/ikfupm/id1473702047'>IOS</a></li>
                             <li class="list-group-item">Work on market website for web development course. <a href='http://testharaj.herokuapp.com/'>Beta Website</a></li>
-                            <li class="list-group-item">Work in privacy project to edit text privately and securely. <a href='https://github.com/amd840/COE426'>GitHub</a></li>                       
                             <li class="list-group-item">Work on a prototype of KFUPM registration system with my team for software course.<a href='https://github.com/mojtaba-alamer/Registration_System'>GitHub</a></li>
 
 
