--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <div class="four wide column">
                         <h4 class="ui header">Contact Info</h4>
                         <div class="ui link list">
-                            <a class="item" href="mailto:ahmedalmoairfi@gmail.com" target="_blank"><i class="linkedin icon"></i>ahmedalmoairfi@gmail.com</a>
-                            <a class="item right justified" href="tel:+966543096731" target="_blank"><i class="phone icon"></i>+966 543096731</a>
+                            <a class="item" href="mailto:ahmedalmoairfi@gmail.com" target="_blank">ahmedalmoairfi@gmail.com</a>
+                            <a class="item right justified" href="tel:+966543096731" target="_blank">+966 543096731</a>
 
                             <a class="item" href="https://www.linkedin.com/in/ahmed-almoairfi-009a57167/" target="_blank"><i class="linkedin icon"></i>ahmed-almoairfi</a>
                         </div>
@@ -162,10 +162,10 @@
         </div>
     </div>
     <script>
-        var OBJECTIVE = 'Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. Expected Graduation at May 2021 Mobile developer works in: Flutter, Xcode and Android Studio'
+        var OBJECTIVE = 'Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. <br>Expected Graduation at May 2021 Mobile developer works in: Flutter, Xcode and Kotlin and Java'
 
         $('#title').text("Ahmed Almoairfi");
-        $('#details').text(OBJECTIVE);
+        $('#details').html(OBJECTIVE);
     </script>
     <script src="details.js"></script>
 
