--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
     </div>
     <script>
-        var OBJECTIVE = 'Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. <br>Expected Graduation at May 2021 Mobile developer works in: Flutter, Xcode and Kotlin and Java'
+        var OBJECTIVE = 'Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. <br>Expected Graduation this May.  <br>Mobile Developer works in: Flutter, Xcode and Kotlin and Java<br>Backend Developer works on: Python Django'
 
         $('#title').text("Ahmed Almoairfi");
         $('#details').html(OBJECTIVE);
