--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
 
 <head>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Ahmed Almoairfi</title>
+    <meta name="description" content="CV about Ahmed Almoairfi">
+    <meta name="author" content="Ahmed Almoairfi">
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
@@ -107,7 +113,7 @@
             <Button class="ui button  buttonc black"><i class="sidebar icon"></i>
             </Button>
 
-
+            <!-- <div class="autumn leaf"><img class="ui small avatar image center" src='./img/self.png'></div> -->
             <div id="titleContainer" class="ui piled segment">
                 <h4 id='title' class="ui header ">A header</h4>
                 <p id='details' class="ui "></p>
@@ -126,7 +132,7 @@
         <div id="footer" class="ui vertical footer segment ">
             <div class="ui center aligned container">
                 <div class="ui stackable grid">
-                    <div class="four wide column">
+                    <div class="five wide column">
                         <h4 class="ui header">Contact Info</h4>
                         <div class="ui link list">
                             <a class="item" href="mailto:ahmedalmoairfi@gmail.com" target="_blank">ahmedalmoairfi@gmail.com</a>
@@ -135,7 +141,10 @@
                             <a class="item" href="https://www.linkedin.com/in/ahmed-almoairfi-009a57167/" target="_blank"><i class="linkedin icon"></i>ahmed-almoairfi</a>
                         </div>
                     </div>
+                    <div class="one wide right floated column">
+                        <div class="ui vertical  divider"></div>
 
+                    </div>
                     <div class="ten wide right floated column">
                         <h4 class="ui header">About Me</h4>
                         <p> Mobile developer works on: Flutter, Xcode, Kotlin and Java<br> Backend developer works on: Python Django</p>
