--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Ahmed Almoairfi</title>
     <meta name="description" content="CV about Ahmed Almoairfi">
     <meta name="author" content="Ahmed Almoairfi">
-
+    <link rel="icon" href="./img/self.png" type="image/png" sizes="16x16">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
     <style>
