--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <a class="item" href="mailto:ahmedalmoairfi@gmail.com" target="_blank">ahmedalmoairfi@gmail.com</a>
                             <a class="item right justified" href="tel:+966543096731" target="_blank">+966 543096731</a>
 
-                            <a class="item" href="https://www.linkedin.com/in/ahmed-almoairfi-009a57167/" target="_blank"><i class="linkedin icon"></i>ahmed-almoairfi</a>
+                            <a class="item" href="https://www.linkedin.com/in/ahmed-almoairfi-009a57167/" target="_blank"><i class="linkedin icon blue"></i>ahmed-almoairfi</a>
                         </div>
                     </div>
                     <div class="one wide right floated column">
@@ -171,7 +171,7 @@
         </div>
     </div>
     <script>
-        var OBJECTIVE = 'Senior Software Engineering Student Study at King Fahad University of Petroleum and Minirals. <br>Expected Graduation this May.  <br>Mobile Developer works in: Flutter, Xcode and Kotlin and Java<br>Backend Developer works on: Python Django'
+        var OBJECTIVE = 'Fresh Graduate Software Engineer. <br>Mobile Developer works in: Flutter, Xcode and Kotlin and Java<br>Backend Developer works on: Python Django'
 
         $('#title').text("Ahmed Almoairfi");
         $('#details').html(OBJECTIVE);
