--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
                 <Button id="menuBtn" class="ui button icon item" onclick="$('.ui.sidebar').sidebar('toggle');">
                     <i class="content icon"></i>
                 </Button>
-
+                <div class="image">
+                    <img style="height: 35px;" src="./self.png" alt="AhmedAlmoairfi">
+                </div>
                 <div class="item">
                     Ahmed Almoairfi
                 </div>
+                
 
 
             </div>
