--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a id='ACTIVITIES' class="item">ACTIVITIES</a>
         <a id='PROGRAMMINGLANGUAGES' class="item">PROGRAMMING LANGUAGES</a>
         <a id='LANGUAGES' class="item">LANGUAGES</a>
-        <a id='DownloadCV' target="_blank" href="./AhmedAlmoairfi.pdf" class="item">Download the CV</a>
+        <a id='DownloadCV' target="_blank" href="./AhmedAlmoairfi_SoftwareEngineer.pdf" class="item">Download the CV</a>
 
 
     </div>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="ui section divider"></div>
                 <div class="ui horizontal small divided link list">
-                    <a class="item">© May 2021 by Ahmed Almoairfi</a>
+                    <a class="item">© Jul 2021 by Ahmed Almoairfi</a>
                 </div>
             </div>
         </div>
