--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <a id='OBJECTIVE' class="item">Ahmed Almoairfi</a>
         <a id='EDUCATIONS' class="item">EDUCATIONS</a>
         <a id='EXPERIENCES' class="item">EXPERIENCES</a>
+        <a id='CERTIFICATIONS' class="item">CERTIFICATIONS</a>
         <a id='PROJECTS' class="item">PROJECTS</a>
         <a id='ACTIVITIES' class="item">ACTIVITIES</a>
         <a id='PROGRAMMINGLANGUAGES' class="item">PROGRAMMING LANGUAGES</a>
